--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.553.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
